@@ -1,8 +1,4 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-
-# Uncomment this to turn on verbose mode.
-# export DH_VERBOSE=1
 
 PKG=powernap
 VER=`head -n 1 debian/changelog | sed 's/^.*(//' | sed 's/).*//' | sed 's/-.*//'`
@@ -11,37 +7,6 @@ get-orig-source:
 	dh_testdir
 	bzr export ../${PKG}_${VER}.orig.tar.gz
 
-clean:
-	dh_clean
+%:
+	dh $@ --with python2
 
-build:
-
-install: build
-	dh_testdir
-	dh_testroot
-	dh_clean -k
-	dh_install -X.bzr
-
-binary-indep: build install
-	dh_testdir -i
-	dh_testroot -i
-	dh_installdirs
-	dh_installdocs -X.bzr -i
-	dh_installman -i
-	dh_lintian
-	dh_installchangelogs -i
-	dh_installdebconf -i
-	dh_installlogrotate --package=${PKG} --name=${PKG}
-	dh_installinit --error-handler=true
-	dh_compress -i
-	dh_fixperms -i
-	DH_PYCENTRAL="include-links" dh_pycentral -i
-	dh_installdeb -i
-	dh_gencontrol -i
-	dh_md5sums -i
-	dh_builddeb -i
-
-binary: binary-indep
-.PHONY: build clean binary-indep binary install get-orig-source
-
-binary-arch:
